--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@capacitor/geolocation": "^7.1.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
